# gradient_prune

./: .gitignore  README.md  pyproject.toml
configs/: qwen25_0p5b_debug.yaml  qwen25_1p5b_math.yaml
create_calibration_dataset/: __init__.py  generate_actor_responses_minimal.py  model_accuracy_test.py  task_accuracy.py  vllm_accuracy_runner.py
response_analysis/: README.md  aggregate_results.py  build_fixed_prefix_bank.py  compute_surface_diversity.py  compute_teacher_student_alignment.py  compute_token_entropy.py  generate_responses.py  io_utils.py  judge_strategy_diversity.py  metrics.py  process_existing_results.py  pruning.py
scripts/: build_wanda_filter_signed_taylor_masks.py  build_wanda_gradnorm_rank_fusion_masks.py  compare_wanda_filter_signed_taylor.py  first_token_all_conditions_diagnostics.py  first_token_generation_diagnostics.py  first_token_rank_fusion_diagnostics.py  pruning_diagnostics.py  run_debug.sh  run_math_pruning.sh  score_wanda.py  summarize_fixed_lambda_rank_fusion_multiseed.py  summarize_gblm_style_gradnorm_fusion_multiseed.py
src/: activation_stats.py  apply_pruning.py  calibration_loaders.py  config.py  data_utils.py  evaluate_accuracy.py  evaluate_ce.py  evaluate_ppl.py  evaluate_vllm_shared.py  experiment_runner.py  gradient_stats.py  layer_utils.py  masks.py  model_utils.py  plotting.py  pruning_scores.py  task_scoring.py
tests/: test_calibration_loaders.py  test_evaluation_config.py  test_experiment_runner_sharding.py  test_gradient_stats.py  test_layer_utils.py  test_mask_loading.py  test_masks.py  test_ppl_config.py  (+4 more)
(+201 files in other folders)
