[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signed-taylor-pruning"
version = "0.1.0"
description = "Clean framework for LLM pruning experiments with Signed Taylor scores."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "pandas",
  "pyarrow",
  "pyyaml",
  "tqdm",
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
test = ["pytest"]
vllm = ["vllm"]

[tool.setuptools]
py-modules = ["activation_stats", "apply_pruning", "calibration_loaders", "config", "data_utils", "evaluate_accuracy", "evaluate_ce", "evaluate_ppl", "experiment_runner", "gradient_stats", "layer_utils", "masks", "model_utils", "plotting", "pruning_scores"]

[tool.setuptools.package-dir]
"" = "src"
